Updated navbar title

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+  <h1>Blog</h1>
+  <p>Read more about me or check out my blogs</p>
   <%= link_to "About me", about_path %>
 </div>
