--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Blog</h1>
   <p>Read more about me or check out my blogs</p>
-  <%= link_to "About me", about_path %>
+  <%= link_to "About me", about_path, class: "btn btn-secondary" %>
+  <%= link_to "Blog", posts_path, class: "btn btn-primary" %>
 </div>
