--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,12 +7,18 @@
   <% end %>
   <% if current_user == comment.user %>
     <div class="btn-group float-end">
-      <%= link_to "Edit", nil, remote:true, class:"btn btn-warning", data: {
+      <%= link_to "Edit", 
+      nil, 
+      remote:true, 
+      class:"btn btn-warning", 
+      data: {
         controller: "comments",
         action: "comments#toggleForm",
         comments_form_param: "edit-form-#{comment.id}",
-        comments_body_param: "comment-body-#{comment.id}"
-      } %>
+        comments_body_param: "comment-body-#{comment.id}",
+        comments_edit_param: "edit-button-#{comment.id}"
+      },
+      id: "edit-button-#{comment.id}" %>
       <%= button_to "Delete", [post, comment], class: "btn btn-danger", method: :delete %>
     </div>
     <div id="edit-form-<%= comment.id %>" class="d-none">
