--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,7 @@
         </li>
       </ul>
       <ul class="navbar-nav">
+        <%= render 'layouts/notifications' %>
         <%= render 'user/session_manager' %>
       </ul>
     </div>
